--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "worker.js",
   "dependencies": {
     "async": "~0.2.9",
-    "fs-extra": "~0.8.1"
+    "fs-extra": "~0.8.1",
+	"lodash": "~2.4.1"
   },
   "keywords": [
     "strider",
