Prepare to publish
Fixed npm package name from strider--dot-net to strider-dot-net
Removed hard coded 'dotnet' plugin name in worker.js in favor of using
context.plugin.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strider--dot-net",
+  "name": "strider-dot-net",
   "version": "0.1.0",
   "description": "Run .NET builds in Strider",
   "main": "worker.js",
