--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "lodash": "~2.4.1",
     "request": "~2.36.0"
   },
+  "optionalDependencies": {
+    "strider-msbuild-logger": "~0.1.0"
+  },
   "keywords": [
     "strider",
     ".NET"
