--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "strider-dot-net",
-  "version": "0.4.0",
-  "description": "Run .NET builds in Strider",
+  "version": "0.5.0",
+  "description": "build .NET projects",
   "homepage": "https://github.com/abe545/strider-dot-net",
   "bugs": "https://github.com/abe545/strider-dot-net/issues",
   "main": "worker.js",
   "dependencies": {
-    "async": "~0.2.10",
-    "fs-extra": "~0.9.1",
-    "lodash": "~2.4.1",
-    "request": "~2.36.0"
+    "async": "^0.9.0",
+    "fs-extra": "^0.12.0",
+    "lodash": "^2.4.1",
+    "request": "^2.49.0"
   },
   "optionalDependencies": {
     "strider-msbuild-logger": "~0.1.0"
   },
   "keywords": [
     "strider",
-    ".NET"
+    "strider-cd",
+    ".NET",
+    "dotnet"
   ],
   "author": {
     "name": "Abraham Heidebrecht"
