--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
   "dependencies": {
     "async": "^1.2.1",
     "fs-extra": "^0.19.0",
+    "glob": "^5.0.10",
     "lodash": "^3.9.3",
     "request": "^2.49.0"
   },
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "gently": "^0.9.2",
+    "istanbul": "^0.3.15",
+    "mocha": "^2.2.5"
+  },
   "optionalDependencies": {
     "strider-msbuild-logger": "~0.1.0"
+  },
+  "scripts": {
+    "test": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec"
   },
   "keywords": [
     "strider",
